--- a/index.html
+++ b/index.html
@@ -48,14 +48,19 @@
       margin: 0 auto;
     }
 
-    .logo {
-      background: var(--neon);
-      color: #000;
-      padding: 12px 18px;
-      border-radius: 8px;
+    .logo-text {
       font-weight: 700;
-      font-size: 1.2rem;
-      letter-spacing: 0.5px;
+      font-size: 1.4rem;
+      background: var(--neon);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      letter-spacing: 1px;
+    }
+
+    .tagline {
+      font-size: 0.8rem;
+      color: var(--muted);
+      letter-spacing: 0.6px;
     }
 
     nav a {
@@ -83,7 +88,7 @@
     }
 
     main {
-      margin-top: 120px;
+      margin-top: 140px;
       padding: 0 20px;
       max-width: var(--max-width);
       margin-left: auto;
@@ -102,16 +107,35 @@
       box-shadow: var(--card-shadow);
     }
 
-    h1, h2 {
+    h1, h2, h3 {
       background: var(--neon);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+    }
+
+    .form-section {
+      text-align: center;
+    }
+
+    .form-section h2 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+    .form-section p {
+      color: var(--muted);
+      max-width: 700px;
+      margin: 0 auto 25px auto;
     }
 
     form.contact {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 14px;
+      background: var(--glass-2);
+      padding: 25px;
+      border-radius: 14px;
+      border: 1px solid rgba(255,255,255,0.08);
     }
 
     input, select, textarea {
@@ -136,40 +160,6 @@
     }
 
     button.btn:hover { opacity: 0.9; }
-
-    .services-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 18px;
-    }
-
-    .card {
-      background: var(--glass-2);
-      padding: 18px;
-      border-radius: 12px;
-      border: 1px solid rgba(255,255,255,0.03);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 6px 20px rgba(0,240,255,0.1);
-    }
-
-    .industries, .brands {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .brand-pill {
-      background: linear-gradient(90deg, rgba(255,255,255,0.04), transparent);
-      border: 1px solid rgba(255,255,255,0.05);
-      border-radius: 999px;
-      padding: 8px 12px;
-      font-size: 13px;
-      color: var(--muted);
-    }
 
     footer {
       background: #07070c;
@@ -220,7 +210,10 @@
 <body>
   <header>
     <div class="topbar">
-      <div class="logo">MicroTech IT Services</div>
+      <div>
+        <div class="logo-text">MicroTech IT Services</div>
+        <div class="tagline">Innovate • Secure • Support</div>
+      </div>
       <nav>
         <a href="#home">Home</a>
         <a href="#about">About</a>
@@ -234,9 +227,9 @@
   </header>
 
   <main>
-    <section id="contact" class="heroCard">
+    <section id="contact" class="heroCard form-section">
       <h2>Request IT Support</h2>
-      <p>Our experts are available 24/7 to help you resolve any IT issues quickly and efficiently. Fill in the form below and we’ll contact you shortly.</p>
+      <p>Need immediate assistance? Fill out the form below to book a preferred time for our certified IT experts to connect with you. We ensure fast, professional, and reliable service 24/7.</p>
       <form class="contact" onsubmit="submitForm(event)">
         <input type="text" placeholder="Full Name" required />
         <input type="email" placeholder="Email Address" required />
