--- a/printer.html
+++ b/printer.html
@@ -1,1 +1,167 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Printer Support | MicroTech IT Services</title>
+  <style>
+    :root {
+      --bg: #0f0f13;
+      --panel: #1c1c22;
+      --text: #e0e0e0;
+      --accent: #00cfe6;
+      --accent2: #7b61ff;
+      --muted: #9aa3b2;
+      --radius: 12px;
+      --card-shadow: 0 8px 20px rgba(0,0,0,0.6);
+    }
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Tahoma, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+    }
+    header, footer {
+      background: var(--panel);
+      text-align: center;
+      padding: 1rem 0.5rem;
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+    header h1 {
+      margin: 0;
+      color: var(--accent);
+      font-size: 1.8rem;
+    }
+    header p {
+      margin: 4px 0 0;
+      color: var(--muted);
+      font-size: 0.9rem;
+    }
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    .support-steps {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 1.5rem;
+    }
+    .step-card {
+      background: var(--panel);
+      padding: 1.4rem;
+      border-radius: var(--radius);
+      box-shadow: var(--card-shadow);
+      transition: transform 0.3s;
+    }
+    .step-card:hover {
+      transform: translateY(-5px);
+    }
+    .step-card h3 {
+      margin: 0 0 0.6rem;
+      color: var(--accent);
+      font-size: 1.2rem;
+    }
+    .step-card p {
+      margin: 0;
+      color: var(--muted);
+      font-size: 0.95rem;
+    }
+    .contact-form {
+      background: var(--panel);
+      padding: 1.8rem;
+      border-radius: var(--radius);
+      box-shadow: var(--card-shadow);
+      margin-top: 2rem;
+    }
+    .contact-form form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .contact-form input,
+    .contact-form select,
+    .contact-form textarea {
+      background: #24242c;
+      border: none;
+      padding: 0.9rem;
+      border-radius: 6px;
+      color: var(--text);
+      font-size: 0.95rem;
+    }
+    .contact-form button {
+      background: linear-gradient(90deg, var(--accent), var(--accent2));
+      color: #00121a;
+      border: none;
+      padding: 0.9rem;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
+      font-weight: 600;
+    }
+    .contact-form .call-btn {
+      margin-top: 0.4rem;
+      background: #28a745;
+      color: #fff;
+    }
+    @media (max-width: 600px) {
+      header h1 { font-size: 1.5rem; }
+      .support-steps { gap: 1rem; }
+      .step-card h3 { font-size: 1.1rem; }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Printer Support</h1>
+    <p>Professional help for all printer problems</p>
+  </header>
+
+  <section>
+    <h2>Common Printer Issues We Solve</h2>
+    <div class="support-steps">
+      <div class="step-card">
+        <h3>Driver Installation</h3>
+        <p>We assist in installing correct drivers, firmware updates, and compatibility fixes.</p>
+      </div>
+      <div class="step-card">
+        <h3>Connection & Networking</h3>
+        <p>Fix WiFi, USB, or network connectivity problems to your printer.</p>
+      </div>
+      <div class="step-card">
+        <h3>Print Quality & Calibration</h3>
+        <p>Tune color, alignment, dark/faint prints, streaks, or blank pages.</p>
+      </div>
+      <div class="step-card">
+        <h3>Hardware & Maintenance</h3>
+        <p>Address paper jams, rollers, sensors, and preventive cleaning.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact-form">
+    <h2>Contact Our Printer Experts</h2>
+    <form>
+      <input type="text" placeholder="Full Name" required />
+      <input type="email" placeholder="Email Address" required />
+      <input type="tel" placeholder="Phone Number" required />
+      <select required>
+        <option value="">Select Printer Brand</option>
+        <option>HP</option>
+        <option>Canon</option>
+        <option>Epson</option>
+        <option>Brother</option>
+        <option>Other</option>
+      </select>
+      <textarea rows="3" placeholder="Describe your printer issue"></textarea>
+      <button type="submit">Submit Request</button>
+      <button class="call-btn" type="button" onclick="window.location.href='tel:+18886497907'">Call Us Now</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 MicroTech IT Services. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
